Added configuration loading and saving

--- a/retirement.kv
+++ b/retirement.kv
@@ -172,6 +172,9 @@
             Button:
                 text: 'Optimize % In Stocks'
                 on_release: app.optimize_percent()
+            Button:
+                text: 'Load Defaults'
+                on_release: app.load_defaults()
 
         Label:
             text: 'Results'
