--- a/retirement.kv
+++ b/retirement.kv
@@ -110,14 +110,14 @@
                 id: average_yearly_need
                 text: '$75,000'
                 multiline: False
-            Label: 
-                text: 'Current Roth'
+            Label:
+                text: 'Current balance not taxed at withdrawal'
             TextInput:
                 id: current_roth
                 text: '$100,000'
                 multiline: False
-            Label: 
-                text: 'Current 401a/403b'
+            Label:
+                text: 'Current balance taxed at withdrawal'
             TextInput:
                 id: current_401a_and_403b
                 text: '$800,000'
