Added private healthcare payments before Medicare starts at 65

--- a/retirement.kv
+++ b/retirement.kv
@@ -140,17 +140,23 @@
                 id: social_security_age_started
                 text: '62'
                 multiline: False
-            Label: 
+            Label:
                 text: 'Mortgage payment'
             TextInput:
                 id: mortgage_payment
                 text: '$0'
                 multiline: False
-            Label: 
+            Label:
                 text: 'Mortgage years left'
             TextInput:
                 id: mortgage_years_left
                 text: '0'
+                multiline: False
+            Label:
+                text: 'Health care payment'
+            TextInput:
+                id: health_care_payment
+                text: '$650'
                 multiline: False
 
         Label:
