Added the Explain Calculations button

--- a/retirement.kv
+++ b/retirement.kv
@@ -176,6 +176,9 @@
                 text: 'Run Simulations'
                 on_release: app.run_simulation()
             Button:
+                text: 'Explain Calculations'
+                on_release: app.explain_calculations()
+            Button:
                 text: 'Load Defaults'
                 on_release: app.load_defaults()
 
