Fixed logic bugs

--- a/retirement.kv
+++ b/retirement.kv
@@ -141,7 +141,7 @@
                 text: '62'
                 multiline: False
             Label:
-                text: 'Mortgage payment'
+                text: 'Monthly mortgage payment'
             TextInput:
                 id: mortgage_payment
                 text: '$0'
