Added a savings account

--- a/retirement.kv
+++ b/retirement.kv
@@ -128,6 +128,18 @@
                 id: current_401a_and_403b
                 text: '$800,000'
                 multiline: False
+            Label:
+                text: 'Savings account (last resort)'
+            TextInput:
+                id: current_savings
+                text: '$50,000'
+                multiline: False
+            Label:
+                text: 'Savings interest rate'
+            TextInput:
+                id: savings_interest_rate
+                text: '4.00%'
+                multiline: False
             Label: 
                 text: 'Full Social Security at 67'
             TextInput:
